<resources>
    <string name="app_name">Museum Ticket Shop</string>
    <string name="authentication">Authentication</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_new_account">Register new account</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="street_number">Street, number</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="back_to_login">Back to Login</string>
    <string name="empty_string">Empty</string>
    <string name="name">Name</string>
    <string name="placeholder">placeholder</string>
    <string name="profile">Profile</string>
    <string name="my_tickets">My tickets</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="choose_exhibition">Choose exhibition</string>
    <string name="number_of_full_price_tickets_adults">Number of full price tickets (adults)</string>
    <string name="number_of_half_price_tickets_students_seniors">Number of half price tickets (students/seniors)</string>
    <string name="_40_ticket">(40 € / ticket)</string>
    <string name="_20_ticket">(20 € / ticket)</string>
    <string name="choose_the_date">Choose the date</string>
    <string name="choose_the_day_for_the_exhibiton">Choose the day for the exhibiton</string>
    <string name="order_tickets">Order tickets</string>
    <string name="choose_an_exhibition_from_the_available_ones">Choose an exhibition from the available ones</string>
    <string name="choose_how_many_full_price_tickets_you_d_like">Choose how many full price tickets you\'d like</string>
    <string name="choose_how_many_half_price_tickets_you_d_like">Choose how many half price tickets you\'d like</string>
    <string name="welcome_to_the_ticket_system_of_imaginary_museum">Welcome to the ticket system of Imaginary Museum</string>
    <string name="name_placeholder">Name placeholder</string>
    <string name="description_placeholder">Description placeholder</string>
    <string name="interested_buy_tickets_requires_login">Interested? Buy tickets! (requires login)</string>
    <string name="image_of_the_exhibition">Image of the exhibition</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout">Logout</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="address">Address</string>
    <string name="google_authentication">Google Authentication</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="unknown">unknown</string>
    <string name="my_tickets_"><![CDATA[My tickets >]]></string>
    <string name="find_your_tickets_to_the_right">Find your tickets to the right</string>
    <string name="modify_ticket_date">Modify ticket date</string>
    <string name="ticked_id">Ticked id</string>
    <string name="exhibition">Exhibition</string>
    <string name="ticket_type">Ticket type</string>
    <string name="current_date">Current date</string>
    <string name="pick_a_new_date">Pick a new date</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="modify_date">Modify date</string>
    <string name="back_to_exhibitions">Back to exhibitions</string>
    <string-array name="number_of_tickets">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <array name="exhibition_images">
        <item>@drawable/beyond_the_horizon</item>
        <item>@drawable/innovations_in_science</item>
        <item>@drawable/the_art_of_illusion</item>
    </array>
</resources>