<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/exhibImageView"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/image_of_the_exhibition" />

        <TextView
            android:id="@+id/exhibName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:text="@string/name_placeholder" />

        <TextView
            android:id="@+id/exhibDescription"
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:layout_marginTop="4dp"
            android:text="@string/description_placeholder" />

        <TextView
            android:id="@+id/exhibBaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interested_buy_tickets_requires_login" />

        <Button
            android:id="@+id/exhibButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/buy_tickets"
            app:backgroundTint="@color/teal_700" />
    </LinearLayout>
</androidx.cardview.widget.CardView>